fixed logo getting cut off and cleaned up a bit

--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,3 @@
-* {
-  font-family: 'Raleway', sans-serif;
-}
 
 .img-fluid {
   height: 20%;
@@ -11,12 +8,6 @@
   transform: translate(-50%, -50%);
 }
 
-.footer {
-  background-color: transparent;
-  bottom: 0;
-  height: 60px;
-  line-height: 60px;
-  position: absolute;
-  text-align: center;
-  width: 100%;
+.page-footer {
+  font-family: 'Raleway', sans-serif;
 }
